Fechando versão para teste pre-prod (#2)